# FraudGuard

./: .gitignore  README.md  main.py  pyproject.toml
backend/: app.py
data/processed/: dataset_metadata.json  test.csv  train.csv  val.csv
data/raw/: synthetic_indian_jobs.json
data_pipeline/: generate_dataset.py  indian_fraud_taxonomy.py  merge_datasets.py
docs/: index.html
extension/: background.js  content.js  manifest.json  popup.css  popup.html  popup.js
extension/sites/: linkedin.js
model/: evaluation_report.json  features.py  top_features.json  train.py  visualize_results.py
