[project]
name = "fraud-job-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.136.3",
    "google-genai>=2.7.0",
    "groq>=1.4.0",
    "matplotlib>=3.10.9",
    "pandas>=3.0.3",
    "pydantic>=2.13.4",
    "scikit-learn>=1.8.0",
    "uvicorn>=0.48.0",
]
